@@ -1,15 +1,13 @@
 void call() {
     node {
         sh """
-        docker run --rm \
-            -v \$(pwd)/migrations:/flyway/sql \
-            -v \$(pwd)/flyway.conf:/flyway/conf/flyway.conf \
-            flyway/flyway:latest \
-            -url=jdbc:snowflake://${SNOWFLAKE_URL} \
-            -user=${SNOWFLAKE_USERNAME} \
-            -password=${SNOWFLAKE_PASSWORD} \
-            -locations=filesystem:/flyway/sql \
-            migrate
+        java --add-opens=java.base/java.nio=org.apache.arrow.memory.core,ALL-UNNAMED \
+             -jar flyway-commandline-<10.17.3>.jar \
+             -url=jdbc:snowflake://${SNOWFLAKE_URL} \
+             -user=${SNOWFLAKE_USERNAME} \
+             -password=${SNOWFLAKE_PASSWORD} \
+             -locations=filesystem:migrations \
+             migrate
         """
     }
 }
